@@ -1,5 +1,6 @@
 Changes for 1.4.1:
 
+ - fixed location of the manual and added link to support (Alexei)
  - check timeouted item only after 4*delay seconds (Alexei)
  - fixed several issues in housekeeper (Alexei) 
  - changed properties of text files in SVN repository (Alexei)
